[package]
name = "xor_name"
version = "3.1.0"
authors = [ "MaidSafe Developers <dev@maidsafe.net>" ]
description = "Xor Type"
homepage = "http://maidsafe.net"
edition = "2018"
license = "MIT OR BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/maidsafe/xor_name"

[dependencies]
rand_core = "0.6.3"

  [dependencies.tiny-keccak]
  version = "~2.0"
  features = [ "sha3" ]

  [dependencies.rand]
  version = "~0.8.5"
  default-features = false
  features = [ "std" ]

  [dependencies.serde]
  version = "1.0.113"
  default-features = false
  features = [ "derive" ]

[dev-dependencies]
rmp-serde = "0.15.5"
bincode = "1.2.1"
eyre = "0.6.5"

  [dev-dependencies.arrayvec]
  version = "~0.5.1"
  default-features = false

  [dev-dependencies.rand]
  version = "~0.8.5"
  default-features = false
  features = [ "getrandom", "small_rng" ]
