[package]
name = "xor_name"
version = "5.0.0"
authors = [ "MaidSafe Developers <dev@maidsafe.net>" ]
description = "Xor Type"
homepage = "http://maidsafe.net"
edition = "2018"
license = "MIT OR BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/maidsafe/xor_name"

[features]
default = [ "serialize-hex" ]
serialize-hex = [ "hex", "serde_test" ]

[dependencies]
rand_core = "0.6.3"

  [dependencies.tiny-keccak]
  version = "~2.0"
  features = [ "sha3" ]

  [dependencies.rand]
  version = "~0.8.5"
  default-features = false
  features = [ "std" ]

  [dependencies.serde]
  version = "1.0.113"
  default-features = false
  features = [ "derive" ]

  [dependencies.serde_test]
  version = "1"
  optional = true

  [dependencies.hex]
  version = "0.4"
  optional = true

[dev-dependencies]
bincode = "1.2.1"

  [dev-dependencies.arrayvec]
  version = "~0.5.1"
  default-features = false

  [dev-dependencies.rand]
  version = "~0.8.5"
  default-features = false
  features = [ "getrandom", "small_rng" ]
